# polymath

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
src/: CMakeLists.txt  polymath.h  polymath.hpp
src/arithmetic/: plm_add.c  plm_add_whole.c  plm_multiply.c  plm_multiply_whole.c  plm_rtz.c  plm_shl.c  plm_shr.c  plm_subtract.c  plm_subtract_whole.c
src/comp/: plm_compare_whole.c
src/cross_platform/: plm_from_int.c
src/init_dest/: plm_free.c  plm_from_base10_string.c  plm_from_int.c  plm_from_long.c  plm_from_long_long.c  plm_from_plm.c  plm_from_unsigned_long_long.c  plm_to_base10_string.c
src/tests/: CMakeLists.txt
src/tests/polymath_tests/plm_from_int/: expected.txt
src/tests/polymath_tests/plm_from_string/: input.txt
tests/: CMakeLists.txt  add_tests.cpp  add_whole.cpp  add_whole_tests.cpp  from_base10_string_tests.cpp  from_base10_string_tests.hpp  from_unsigned_long_long_tests.cpp  multiply_tests.cpp  multiply_whole_tests.cpp  polymath_tests.cpp  subtract_tests.cpp  subtract_whole_tests.cpp  test.cpp  to_base10_string_tests.cpp  to_base10_string_tests.hpp
